--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,10 @@
 @import url(./components/AboutMe/AboutMe.css);
 
 @import url(./components/Movies/Movies.css);
+@import url(./components/SavedMovies/SavedMovies.css);
 @import url(./components/MoviesCardList/MoviesCardList.css);
 @import url(./components/MoviesCard/MoviesCard.css);
+
 
 
 @import url(./components/Navigation/Navigation.css);
