добавляет страницу 404 по несуществующему роуту

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@
 @import url(./components/FilterCheckbox/FilterCheckbox.css);
 
 
-
+@import url(./components/NotFoundPage/NotFoundPage.css);
 
 @import url(./components/Footer/Footer.css);
 
