создает компонент попапа для ошибок Api и компонент Figure для children попапа

--- a/src/index.css
+++ b/src/index.css
@@ -33,4 +33,6 @@
 
 @import url(./components/Footer/Footer.css);
 
+@import url(./components/Popup/Popup.css);
+@import url(./components/Figure/Figure.css);
 
