--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,10 +1,10 @@
-.navigation {
+.header__navigation {
   display: flex;
   align-items: center;
   padding: 0;
 }
 
-.navigation__link {
+.header__navigation-link {
   color: #000;
   font-weight: 400;
   font-size: 13px;
@@ -13,10 +13,10 @@
   padding-right: 16px;
 }
 
-.navigation__link:nth-of-type(2) {
+.header__navigation-link:nth-of-type(2) {
   padding-right: 0;
 }
 
-.navigation__link_type_active {
+.header__navigation-link_type_active {
   font-weight: 500;
 }
