переносит часть кода из компонента AboutMe в Portfolio

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
 @import url(./components/AboutProject/AboutProject.css);
 @import url(./components/Techs/Techs.css);
 @import url(./components/AboutMe/AboutMe.css);
+@import url(./components/Portfolio/Portfolio.css);
 
 @import url(./components/Movies/Movies.css);
 @import url(./components/SavedMovies/SavedMovies.css);
