--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@
 
 @import url(./components/FilterCheckbox/FilterCheckbox.css);
 
+@import url(./components/Profile/Profile.css);
 
 @import url(./components/NotFoundPage/NotFoundPage.css);
 
