создает универсальные компоненты для страниц /login и /register: FormPageHeader, FormPageForm, FormPageFieldset; создает компоненты Login для роута /login; создает универсальный микс логотипа хедера MainLogo

--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -19,11 +19,11 @@
   appearance: none;
 }
 
-.search__checkbox-input:checked + .checkbox__span::before {
+.search__checkbox-input:checked + .search__checkbox-span::before {
   background-color: #EBEBEB;
 }
 
-.search__checkbox-input:checked + .checkbox__span::after {
+.search__checkbox-input:checked + .search__checkbox-span::after {
   background-color: #F5F5F5;
   left: 2px;
 }
