--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,14 @@
 
 @import url(./components/App/App.css);
 
+/* миксы: */
 @import url(./components/Opacity/Opacity.css);
 @import url(./components/Name/Name.css);
-@import url(./components/Preloader/Preloader.css);
+@import url(./components/MainLogo/MainLogo.css);
 
 @import url(./components/Header/Header.css);
+@import url(./components/Navigation/Navigation.css);
+
 @import url(./components/Main/Main.css);
 @import url(./components/Promo/Promo.css);
 @import url(./components/NavTab/NavTab.css);
@@ -18,22 +21,22 @@
 
 @import url(./components/Movies/Movies.css);
 @import url(./components/SavedMovies/SavedMovies.css);
+@import url(./components/SearchForm/SearchForm.css);
+@import url(./components/Preloader/Preloader.css);
+@import url(./components/FilterCheckbox/FilterCheckbox.css);
 @import url(./components/MoviesCardList/MoviesCardList.css);
 @import url(./components/MoviesCard/MoviesCard.css);
 
-
-
-@import url(./components/Navigation/Navigation.css);
-
-@import url(./components/SearchForm/SearchForm.css);
-
-@import url(./components/FilterCheckbox/FilterCheckbox.css);
-
 @import url(./components/Profile/Profile.css);
+
+@import url(./components/Footer/Footer.css);
 
 @import url(./components/NotFoundPage/NotFoundPage.css);
 
-@import url(./components/Footer/Footer.css);
+@import url(./components/Login/Login.css);
+@import url(./components/FormPageHeader/FormPageHeader.css);
+@import url(./components/FormPageForm/FormPageForm.css);
+@import url(./components/FormPageFieldset/FormPageFieldset.css);
 
 @import url(./components/Popup/Popup.css);
 @import url(./components/Figure/Figure.css);
