исправлена стилизация плэйсхолдеров элементов форм

--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -51,6 +51,20 @@
   width: 85%;
 }
 
+.profile__input::placeholder {
+  color: #e0e0e0;
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.profile__input[type="text"]:focus {
+  color: #FF3055;
+}
+
+.profile__input[type="email"]:focus {
+  color: #FF3055;
+}
+
 .profile__input:disabled {
   background-color: #fff;
 }
