--- a/src/components/FormPageFieldset/FormPageFieldset.css
+++ b/src/components/FormPageFieldset/FormPageFieldset.css
@@ -25,6 +25,25 @@
   padding: 0 15px;
 }
 
+.form__input::placeholder {
+  color: #e0e0e0;
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.form__input[type="text"]:focus {
+  color: #FF3055;
+}
+
+.form__input[type="email"]:focus {
+  color: #FF3055;
+}
+
+.form__input[type="password"]:focus {
+  color: #FF3055;
+}
+
+
 .form__input_type_error {
   border-bottom: 1px solid #FF0000;
 }
