создает компонент инпутов ProfileFormFieldset для формы компонента Profile. -> Изменяет код компонента Profile

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@
 @import url(./components/MoviesCard/MoviesCard.css);
 
 @import url(./components/Profile/Profile.css);
+@import url(./components/ProfileFormFieldset/ProfileFormFieldset.css);
 
 @import url(./components/Footer/Footer.css);
 
