--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,8 +1,11 @@
 .app {
   background-color: #fff;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+  /* display: flex;
+  flex-direction: column; */
+  min-width: 320px;
+  max-width: 100vw;
+  position: relative;
+  /* min-height: 100vh; */
 }
 
 
