--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -11,7 +11,7 @@
   font-size: 13px;
   font-weight: 400;
   line-height: 52px;
-  border-bottom: 1px solid #E8E8E8;;
+  border-bottom: 1px solid #E8E8E8;
 }
 
 .footer__container {
@@ -34,7 +34,7 @@
 
 .footer__link {
   margin: 0;
-  padding-right: 17px;
+  padding-right: 20px;
   font-size: 13px;
   font-weight: 400;
   color: #000;
