--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -15,17 +15,17 @@
   border: none;
   border-radius: 40px;
   background: #F9F9F9;
-  padding-left: 22px;
   width: 100%;
   height: 46px;
   font-size: 13px;
+  line-height: 17px;
+  font-weight: 400;
   outline: none;
+  padding: 0 0 0 22px;
 }
 
 .search__input::placeholder {
   color: #A0A0A0;
-  font-size: 13px;
-  font-weight: 400;
 }
 
 .search__input[type="text"]:focus {
@@ -35,7 +35,7 @@
 .search__button {
   border: none;
   background: transparent;
-  padding-right: 6px;
+  padding: 1px 6px 0 0;
 }
 
 .search__button-image {
