--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 
 @import url(./components/Header/Header.css);
 @import url(./components/Navigation/Navigation.css);
+@import url(./components/BurgerPopup/BurgerPopup.css);
 
 @import url(./components/Main/Main.css);
 @import url(./components/Promo/Promo.css);
