исправляет модификаторы классов (убирает _type); убирает css-свойство :focus оттуда, где оно не нужно; добавляет отображение ошибки и блокирование кнопки на странице /profile

--- a/src/components/FormPageFieldset/FormPageFieldset.css
+++ b/src/components/FormPageFieldset/FormPageFieldset.css
@@ -31,7 +31,7 @@
   font-weight: 400;
 }
 
-.form__input[type="text"]:focus {
+/* .form__input[type="text"]:focus {
   color: #FF3055;
 }
 
@@ -41,10 +41,10 @@
 
 .form__input[type="password"]:focus {
   color: #FF3055;
-}
+} */
 
 
-.form__input_type_error {
+.form__input_error {
   border-bottom: 1px solid #FF0000;
 }
 
