--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -51,7 +51,7 @@
   text-decoration: none;
 }
 
-.profile__submit-button-container {
+.profile__button-submit-container {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -66,7 +66,7 @@
   font-weight: 500;
 }
 
-.profile__submit-button {
+.profile__button-submit {
   font-size: 14px;
   font-weight: 500;
   border: none;
@@ -76,7 +76,7 @@
   color: #FFF;
 }
 
-.profile__submit-button_disabled {
+.profile__button-submit_disabled {
   background-color: #F8F8F8;
   color: #C2C2C2;
 }
