выносит в отдельный компонент логотип из хэдера и со страниц с формами

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,7 +1,7 @@
 .header__navigation {
   display: flex;
   align-items: center;
-  padding: 0;
+  padding: 0 0 0 60px;
 }
 
 .header__navigation-link {
