--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 /* миксы: */
 @import url(./components/Opacity/Opacity.css);
 @import url(./components/Name/Name.css);
-@import url(./components/MainLogo/MainLogo.css);
+@import url(./components/Logo/Logo.css);
 
 @import url(./components/Header/Header.css);
 @import url(./components/Navigation/Navigation.css);
@@ -41,7 +41,4 @@
 @import url(./components/FormPageHeader/FormPageHeader.css);
 @import url(./components/FormPageForm/FormPageForm.css);
 @import url(./components/FormPageFieldset/FormPageFieldset.css);
-
-@import url(./components/Popup/Popup.css);
-@import url(./components/Figure/Figure.css);
 
