выносит в отдельный компонент ссылку на аккаунт /profile

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 @import url(./components/Opacity/Opacity.css);
 @import url(./components/Name/Name.css);
 @import url(./components/Logo/Logo.css);
+@import url(./components/AccountLogo/AccountLogo.css);
 
 @import url(./components/Header/Header.css);
 @import url(./components/Navigation/Navigation.css);
