--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,6 +14,11 @@
   padding-bottom: 79px;
 }
 
+.header__account-logo-visibility {
+  margin: 0;
+  padding: 0;
+}
+
 .header__nav {
   display: flex;
   justify-content: flex-end;
@@ -41,35 +46,13 @@
   text-align: center;
 }
 
-.header__link_dark {
-  color: #000;
-  font-size: 14px;
-  padding-right: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .header__account-button {
   display: none;
 }
 
-.header__link-image {
-  background-color: #F9F9F9;
-  margin: 0;
-}
-
-.header__link-button{
-  width: 26px;
-  height: 30px;
-  margin-left: 17px;
-  border: none;
-  border-radius: 4px;
-  padding: 0;
-}
-
+/* кнопка бургер-меню */
 @media screen and (max-width: 900px) {
-  .header__link_dark {
+  .header__account-logo-visibility {
     display: none;
   }
 
