--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,5 +1,5 @@
-.movies__list {
-  padding: 80px 0 62px 0;
+.movies-list {
+  padding: 80px 0 61px 0;
   margin: 0 auto;
   max-width: max-content;
   display: grid;
