--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 /* миксы: */
 @import url(./components/Opacity/Opacity.css);
-@import url(./components/Name/Name.css);
+@import url(./components/LandingTitle/LandingTitle.css);
 @import url(./components/Logo/Logo.css);
 @import url(./components/AccountLogo/AccountLogo.css);
 
