--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -1,4 +1,4 @@
-.nav {
+.nav-bar {
   font-family: 'Inter', Arial, sans-serif;
   background-color: #000;
   height: 66px;
@@ -7,7 +7,7 @@
   align-items: center;
 }
 
-.nav__link {
+.nav-bar__link {
   color: #fff;
   font-size: 13px;
   font-weight: 500;
@@ -15,6 +15,6 @@
   padding-right: 40px;
 }
 
-.nav__link:nth-of-type(3) {
+.nav-bar__link:nth-of-type(3) {
   padding-right: 0;
 }
