--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -1,12 +1,7 @@
 .techs {
   background: #F5F5F5;
   font-family: 'Inter', Arial, sans-serif;
-  padding: 0 70px 100px;
-}
-
-.techs__name {
-  padding-top: 105px;
-  height: 48px;
+  padding: 105px 70px 100px;
 }
 
 .techs__article {
