добавляет css-свойство :focus инпутам

--- a/src/components/FormPageFieldset/FormPageFieldset.css
+++ b/src/components/FormPageFieldset/FormPageFieldset.css
@@ -29,6 +29,10 @@
   padding: 0 15px;
 }
 
+.form-field__input:focus {
+  outline: 1px solid #F5F5F5;
+}
+
 .form-field__input_incorrect {
   color: #FF3055;
 }
