корректирует стилизацию страниц для расширения 1280 и шире

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -1,5 +1,9 @@
 .about-me {
   font-family: 'Inter', Arial, sans-serif;
+  max-width: 1280px;
+  min-width: 320px;
+  margin: 0 auto;
+  box-sizing: border-box;
   padding: 110px 70px 0;
 }
 
@@ -10,7 +14,7 @@
 }
 
 .about-me__article {
-  max-width: 600px;
+
 }
 
 .about-me__title {
@@ -34,7 +38,7 @@
   line-height: 22px;
   margin: 0;
   padding-bottom: 99px;
-  max-width: 599px;
+  max-width: 68%;
 }
 
 .about-me__link-github {
