--- a/src/components/FormPageHeader/FormPageHeader.css
+++ b/src/components/FormPageHeader/FormPageHeader.css
@@ -1,16 +1,12 @@
 .form-page-header {
   font-family: 'Inter', Arial, sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  row-gap: 41px;
-  width: 31%;
+  max-width: 396px;
+  min-width: 320px;
   margin: 0 auto;
   padding: 70px 0 41px;
-}
-
-.form-page-header__logo {
-
+  display: flex;
+  flex-direction: column;
+  row-gap: 41px;
 }
 
 .form-page-header__title {
