--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,13 +1,10 @@
 .app {
   background-color: #fff;
-  /* display: flex;
-  flex-direction: column; */
   min-width: 320px;
   max-width: 100vw;
+  min-height: 100vh;
   position: relative;
-  /* min-height: 100vh; */
 }
-
 
 /* @media screen and (max-width: 800px) {
   .app {
