--- a/src/components/FormPageMain/FormPageMain.css
+++ b/src/components/FormPageMain/FormPageMain.css
@@ -2,7 +2,7 @@
   font-family: 'Inter', Arial, sans-serif;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  width: 31%;
+  max-width: 396px;
+  min-width: 320px;
   margin: 0 auto;
 }
