--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -1,8 +1,10 @@
 .movies {
   font-family: 'Inter', Arial, sans-serif;
+  max-width: 1280px;
+  min-width: 320px;
+  margin: 0 auto;
+  box-sizing: border-box;
   padding: 0 70px 140px;
-  margin: 0;
-  max-width: 100%;
   flex-grow: 1;
 }
 
