--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,5 +1,9 @@
 .profile {
   font-family: 'Inter', Arial, sans-serif;
+  max-width: 1280px;
+  min-width: 320px;
+  margin: 0 auto;
+  box-sizing: border-box;
   padding: 0 70px;
   display: flex;
   flex-direction: column;
@@ -11,12 +15,12 @@
   font-size: 24px;
   font-weight: 500;
   margin: 0;
-  padding: 13px 0;
+  padding: 14px 0;
 }
 
 .profile__form {
   width: 36%;
-  padding-top: 110px;
+  padding-top: 109px;
   display: flex;
   flex-direction: column;
   row-gap: 16px;
