--- a/src/components/SavedMovies/SavedMovies.css
+++ b/src/components/SavedMovies/SavedMovies.css
@@ -1,7 +1,9 @@
 .saved-movies {
   font-family: 'Inter', Arial, sans-serif;
+  max-width: 1280px;
+  min-width: 320px;
+  margin: 0 auto;
+  box-sizing: border-box;
   padding: 0 70px 0;
-  margin: 0;
-  max-width: 100%;
   flex-grow: 1;
 }
