--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -1,6 +1,13 @@
 .techs {
   background: #F5F5F5;
+}
+
+.techs__wrapper {
   font-family: 'Inter', Arial, sans-serif;
+  max-width: 1280px;
+  min-width: 320px;
+  margin: 0 auto;
+  box-sizing: border-box;
   padding: 105px 70px 100px;
 }
 
