корректирует стилизацию страниц для расширения 768 (без бургер-меню)

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -4,13 +4,13 @@
   min-width: 320px;
   margin: 0 auto;
   box-sizing: border-box;
-  padding: 110px 70px 0;
+  padding: 110px 70px 100px;
 }
 
 .about-me__article-cover {
   display: flex;
   justify-content: space-between;
-  padding: 66px 0 100px;
+  padding-top: 66px;
 }
 
 .about-me__article {
@@ -52,4 +52,42 @@
 .about-me__photo {
   width: 270px;
   height: 327px;
+}
+
+@media screen and (max-width: 1025px) {
+  .about-me {
+    padding: 91.5px 50px 91px;
+  }
+
+  .about-me__title {
+    font-size: 40px;
+    line-height: 40px;
+    letter-spacing: -1.6px;
+    padding-bottom: 17px;
+  }
+
+  .about-me__subtitle {
+    font-size: 12px;
+    line-height: 18px;
+    padding-bottom: 20px;
+  }
+
+  .about-me__paragraph {
+    font-size: 12px;
+    line-height: 18px;
+    padding-bottom: 85px;
+    max-width: 86%;
+  }
+
+  .about-me__photo {
+    width: 255px;
+    height: 307px;
+    padding-right: 1px;
+  }
+
+
+}
+
+@media screen and (max-width: 670px) {
+
 }
