--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -4,7 +4,7 @@
   min-width: 320px;
   margin: 0 auto;
   box-sizing: border-box;
-  padding: 0 70px;
+  padding: 14px 0 70px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,12 +15,11 @@
   font-size: 24px;
   font-weight: 500;
   margin: 0;
-  padding: 14px 0;
 }
 
 .profile__form {
-  width: 36%;
-  padding-top: 109px;
+  width: 412px;
+  padding-top: 124px;
   display: flex;
   flex-direction: column;
   row-gap: 16px;
@@ -37,7 +36,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 205px;
+  padding-top: 203px;
 }
 
 .profile__edit-button {
@@ -85,4 +84,21 @@
   color: #C2C2C2;
 }
 
+@media screen and (max-width: 1025px) {
+  .profile {
+    padding-top: 157px;
+  }
 
+  .profile__form {
+    padding-top: 96px;
+  }
+
+  .profile__button-container {
+    padding-top: 194px;
+  }
+
+}
+
+@media screen and (max-width: 670px) {
+
+}
