--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,6 +4,9 @@
   max-width: 100vw;
   min-height: 100vh;
   position: relative;
+  /* flex для прилипшего footer к низу страницы */
+  display: flex;
+  flex-direction: column;
 }
 
 /* @media screen and (max-width: 800px) {
