--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,7 +2,6 @@
   font-family: 'Inter', Arial, sans-serif;
   max-width: 1280px;
   min-width: 320px;
-  margin: 0 auto;
   box-sizing: border-box;
   padding: 0 70px 20px;
   flex-shrink: 0;
@@ -47,4 +46,15 @@
 
 .footer__link:nth-of-type(2) {
   padding-right: 0;
+}
+
+@media screen and (max-width: 1025px) {
+  .footer {
+    padding: 0 30px 20px;
+  }
+
+}
+
+@media screen and (max-width: 670px) {
+
 }
