--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -19,3 +19,14 @@
   padding: 0;
   margin: 0;
 }
+
+@media screen and (max-width: 1025px) {
+  .movies {
+    padding: 0 30px 140px;
+  }
+
+}
+
+@media screen and (max-width: 670px) {
+
+}
