--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -21,14 +21,13 @@
   justify-content: space-between;
   align-items: flex-start;
   margin: 0;
-  padding: 0 16px 16px;
+  padding: 15px 16px 16px;
 }
 
 .movie-item__info-container {
   display: flex;
   flex-direction: column;
   row-gap: 17px;
-  padding-top: 15px;
 }
 
 .movie-item__name {
@@ -75,4 +74,25 @@
 
 .movie-item:hover .movie-item__button-delete_visible{
   display: block
+}
+
+
+@media screen and (max-width: 1025px) {
+  .movie-item {
+    height: 262px;
+  }
+
+  .movie-item__image {
+    width: 339px;
+    height: 190px;
+  }
+
+  .movie-item__info {
+    padding: 13px 14px;
+  }
+
+}
+
+@media screen and (max-width: 670px) {
+
 }
