--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -4,8 +4,21 @@
   max-width: max-content;
   display: grid;
   grid-template-columns: repeat(3, max-content);
-  grid-template-rows: repeat(2, max-content);
   column-gap: 24px;
   row-gap: 37px;
   box-sizing: border-box;
+}
+
+@media screen and (max-width: 1025px) {
+  .movies-list {
+    padding: 80px 0;
+    grid-template-columns: repeat(2, max-content);
+    column-gap: 30px;
+    row-gap: 30px;
+  }
+
+}
+
+@media screen and (max-width: 670px) {
+
 }
