--- a/src/components/SavedMovies/SavedMovies.css
+++ b/src/components/SavedMovies/SavedMovies.css
@@ -7,3 +7,14 @@
   padding: 0 70px 0;
   flex-grow: 1;
 }
+
+@media screen and (max-width: 1025px) {
+  .saved-movies {
+    padding: 0 30px 0;
+  }
+
+}
+
+@media screen and (max-width: 670px) {
+
+}
