--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -16,8 +16,7 @@
   flex-direction: column;
   align-items: center;
   row-gap: 26px;
-  padding-top: 90px;
-  padding-bottom: 100px;
+  padding: 90px 0 100px;
 }
 
 .techs__title {
@@ -47,13 +46,42 @@
 
 .techs__icon {
   font-size: 14px;
-  font-weight: 60px;
+  font-weight: 400;
+  line-height: 60px;
   letter-spacing: -0.56px;
   list-style: none;
   width: 90px;
   height: 60px;
-  line-height: 60px;
+  border-radius: 10px;
   background-color: #E8E8E8;
   text-align: center;
-  border-radius: 10px;
+}
+
+@media screen and (max-width: 1025px) {
+  .techs__wrapper {
+    padding: 91px 50px 90px;
+  }
+
+  .techs__article {
+    row-gap: 22px;
+    padding: 82px 0 82px;
+  }
+
+  .techs__subtitle {
+    font-size: 12px;
+    letter-spacing: -0.48px;
+    line-height: 18px;
+  }
+
+  .techs__icon {
+    font-size: 12px;
+    letter-spacing: -0.48px;
+    width: 84px;
+    height: 57px;
+  }
+
+}
+
+@media screen and (max-width: 670px) {
+
 }
