корректирует стилизацию страниц для расширения 768 (в т.ч. бургер-меню)

--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -1,6 +1,6 @@
 .checkbox {
   font-family: 'Inter', Arial, sans-serif;
-  padding: 41px 40px 0;
+  padding-top: 41px;
   display: flex;
   flex-direction: column;
   align-items: center;
