--- a/src/components/BurgerPopup/BurgerPopup.css
+++ b/src/components/BurgerPopup/BurgerPopup.css
@@ -7,10 +7,10 @@
   z-index: 999;
   display: flex;
   justify-content: end;
-  /* align-items: center; */
   background-color: rgba(0, 0, 0, 0.3);
   transition: .3s;
   position: fixed;
+  height: 100vh;
   left: 0;
   right: 0;
   top: 0;
@@ -20,27 +20,33 @@
 .burger-popup__container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: space-between;
+  box-sizing: border-box;
   background-color: #fff;
-  width: 40%;
-  padding: 22.44px 22.44px 92px 22.44px;
+  width: 520px;
+  padding: 22.44px 24px 92px;
+}
+
+.burger-popup__wrapper {
+  display: flex;
+  flex-direction: column;
 }
 
 .burger-popup__close-button {
-  background: url("../../images/header__burger-icon-close.svg");
+  background: url("../../images/header__burger-icon-close.svg") no-repeat;
   background-color: transparent;
   width: 30px;
   height: 30px;
   border: none;
   align-self: flex-end;
+  padding-bottom: 133px;
 }
 
 .burger-popup__links-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  row-gap: 28px;
+  row-gap: 19px;
 }
 
 .burger-popup__link {
@@ -55,4 +61,6 @@
   display: table;
   border-bottom: 2px solid #000;
 }
+
+
 
