--- a/src/components/FormPageHeader/FormPageHeader.css
+++ b/src/components/FormPageHeader/FormPageHeader.css
@@ -2,6 +2,7 @@
   font-family: 'Inter', Arial, sans-serif;
   width: 396px;
   margin: 0 auto;
+  padding-top: 15px;
   padding-bottom: 41px;
   display: flex;
   flex-direction: column;
