--- a/src/components/NotFoundPage/NotFoundPage.css
+++ b/src/components/NotFoundPage/NotFoundPage.css
@@ -11,7 +11,7 @@
   font-size: 140px;
   font-weight: 400;
   margin: 0;
-  padding-bottom: 10px;
+  padding: 189px 0 10px;
 }
 
 .not-found-page__subtitle {
